Adding example program to stream a string characteristic, printing only when it changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,7 @@ if(GATTLIB_BUILD_EXAMPLES)
   add_subdirectory(examples/ble_scan)
   add_subdirectory(examples/discover)
   add_subdirectory(examples/read_write)
+  add_subdirectory(examples/read_stream)
   add_subdirectory(examples/notification)
   add_subdirectory(examples/nordic_uart)
 
